# ai-doc-intelligence

./: README.md  main.py  pyproject.toml
app/embeddings/: embedder.py
app/ingestion/: document_loader.py  text_splitter.py
app/llm/: llm.py
app/retrieval/: vector_store.py
