[project]
name = "ai-doc-intelligence"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faiss-cpu>=1.13.2",
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.14",
    "openai>=2.32.0",
    "pydantic>=2.13.1",
    "pypdf>=6.10.2",
    "python-dotenv>=1.2.2",
    "tiktoken>=0.12.0",
]
